# percona-server

./: CMakeLists.txt
client/: mysqlbinlog.cc
include/: my_aes.h  my_base.h  my_crypt.h  sql_string.h  system_key.h
include/mysql/: service_mysql_keyring.h
libbinlogevents/include/: binlog_event.h  control_events.h
libbinlogevents/src/: binlog_event.cpp  control_events.cpp
mysql-test/: mysql-test-run.pl
mysql-test/collections/: disabled.def
mysql-test/extra/binlog_tests/: binlog_incident.test  binlog_mysqlbinlog-cp932.test  drop_temp_table.test  logical_timestamping.inc
mysql-test/extra/rpl_tests/: create_recursive_construct.inc  gtid_disconnect_drop_temporary_table.test  rpl_check_gtid.inc  rpl_checksum.test  rpl_drop_temp.test  rpl_gtid_drop_table.test  rpl_gtid_spanned_trx.test  rpl_split_statements.test  rpl_stm_mixed_mts_rec_crash_safe_checksum.test
mysql-test/include/: assert.inc  assert_logical_timestamps.inc  dd_schema_dump_table_defs_debug.inc  plugin.defs  table_encrypt_1.inc  table_encrypt_1_small.inc  table_encrypt_3.inc  table_encrypt_4.inc  table_encrypt_5.inc  table_encrypt_debug.inc  table_encrypt_kill.inc  wait_condition.inc  wait_until_connected_again.inc
mysql-test/lib/My/: ConfigFactory.pm
mysql-test/r/: mysqldump-max.result  opt_hints_pfs.result  percona_bug1687964.result  percona_bug643149.result  percona_dd_upgrade_encrypted.result
mysql-test/std_data/: keys2.txt  keys3.txt
mysql-test/std_data/binlog_encryption_scheme_1/: keyring_with_percona_binlog_key  keyring_with_percona_binlog_key_for_slave  schema_1_encrypted_master-bin.000002  schema_1_encrypted_slave-relay-bin.000001  schema_1_encrypted_slave-relay-bin.000002  schema_1_encrypted_truncated_master-bin.000002
mysql-test/std_data/keyring_vault_confs/: keyring_vault.conf  keyring_vault2.conf  keyring_vault_incorrect_server.conf  keyring_vault_mtr_directory_template1.conf  keyring_vault_mtr_directory_template1_v1_set.conf  keyring_vault_mtr_directory_template2.conf  keyring_vault_mtr_directory_template2_v1_set.conf  keyring_vault_mtr_mount_template1.conf  keyring_vault_mtr_mount_template1_v1_set.conf  keyring_vault_mtr_mount_template1_v2_set.conf  keyring_vault_mtr_mount_template2.conf  keyring_vault_mtr_mount_template2_v1_set.conf  keyring_vault_mtr_mount_template2_v2_set.conf  keyring_vault_mtr_template1.conf  keyring_vault_mtr_template2.conf  keyring_vault_ut.conf  keyring_vault_v2_mtr_directory_template1.conf  keyring_vault_v2_mtr_directory_template1_v2_set.conf  keyring_vault_v2_mtr_directory_template2.conf  keyring_vault_v2_mtr_directory_template2_v2_set.conf  keyring_vault_v2_mtr_invalid_token_template.conf  (+1 more)
mysql-test/t/: dd_schema_definition_debug.test  percona_bug1687964.test  percona_bug643149.test  percona_dd_upgrade_encrypted.test
mysys/: my_error.cc  system_key.c  system_key.cc
mysys_ssl/: CMakeLists.txt  my_crypt.cc
plugin/keyring/: CMakeLists.txt  keyring.cc
plugin/keyring_vault/: CMakeLists.txt  i_vault_curl.h  i_vault_io.h  i_vault_parser.h  vault_base64.cc  vault_base64.h  vault_credentials.cc  vault_credentials.h  vault_credentials_parser.cc  vault_credentials_parser.h  vault_curl.cc  vault_curl.h  vault_io.cc  vault_io.h  vault_key.cc  vault_key.h  vault_key_serializer.h  vault_keyring.cc  vault_keys_container.cc  vault_keys_container.h  vault_keys_list.cc  vault_keys_list.h  vault_parser.cc  vault_parser.h
plugin/keyring_vault/keyring_vault-test/: CMakeLists.txt  keyring_vault-test.cc
plugin/keyring_vault/tests/mtr/: delete_secret_directory.inc  generate_conf_file.inc  generate_default_directory_conf_files.inc  generate_default_directory_kv_v2_conf_files.inc  generate_default_mount_conf_files.inc  key_rotation_qa.test  keyring_udf.result  keyring_udf.test  keyring_vault_config.test  keyring_vault_config_qa.test  mount_point_service.inc  rpl_key_rotation.test  table_encrypt_1.result  table_encrypt_1.test  table_encrypt_1_directory.inc  table_encrypt_1_directory.result  table_encrypt_1_directory.test  table_encrypt_1_directory_v1_set.result  table_encrypt_1_directory_v1_set.test  table_encrypt_1_directory_v2.result  table_encrypt_1_directory_v2.test  table_encrypt_1_directory_v2_set.result  table_encrypt_1_directory_v2_set.test  table_encrypt_1_rotated_keys.result  table_encrypt_1_rotated_keys.test  table_encrypt_1_v1_set.result  table_encrypt_1_v1_set.test  table_encrypt_1_v2.result  table_encrypt_1_v2.test  table_encrypt_1_v2_set.result  table_encrypt_1_v2_set.test  table_encrypt_2.result  table_encrypt_2.test  table_encrypt_2_directory.inc  table_encrypt_2_directory.result  table_encrypt_2_directory.test  table_encrypt_2_directory_v2.result  table_encrypt_2_directory_v2.test  table_encrypt_2_rotated_keys.result  table_encrypt_2_rotated_keys.test  (+31 more)
scripts/: mysql_system_tables_fix.sql
share/: errmsg-utf8.txt  messages_to_clients.txt  messages_to_error_log.txt
sql/: CMakeLists.txt  binlog.cc  binlog.h  binlog_crypt_data.cc  binlog_crypt_data.h  binlog_istream.cc  binlog_reader.cc  binlog_reader.h  dd_table_share.cc  event_crypt.cc  event_crypt.h  handler.cc  handler.h  item_create.cc  item_inetfunc.cc  item_inetfunc.h  item_keyring_func.cc  item_keyring_func.h  item_strfunc.h  lex.h  log.cc  log_crypt.cc  log_crypt.h  log_event.cc  log_event.h  mysqld.cc  mysqld.h  opt_costmodel.cc  opt_range.cc  parse_tree_nodes.h  parser_yystype.h  rpl_applier_reader.cc  rpl_binlog_sender.cc  rpl_binlog_sender.h  rpl_constants.h  rpl_gtid_persist.cc  rpl_gtid_persist.h  rpl_master.cc  rpl_rli.cc  rpl_rli.h  (+31 more)
sql/auth/: sql_authorization.cc
sql/dd/: dd_table.cc  dd_table.h  dictionary.h
sql/share/: errmsg-utf8.txt
storage/innobase/: CMakeLists.txt
unittest/gunit/: CMakeLists.txt  opt_range-t.cc
unittest/gunit/keyring/: CMakeLists.txt  keyring-api-t.cc  keys_container-t.cc  system_keys_container-t.cc  uuid.cc  uuid.h
unittest/gunit/keyring_vault/: CMakeLists.txt  uuid.h  vault_credentials_parser-t.cc  vault_io-t.cc  vault_keyring-api-t.cc  vault_keys_container-t.cc  vault_mount.cc  vault_parser-t.cc
vio/: viossl.cc  viosslfactories.cc
(+576 files in other folders)
